--- a/project.html
+++ b/project.html
@@ -28,3 +28,45 @@
     </nav>
         </nav>
         <main>
+            <section id="projects">
+                <h2>Projects</h2>
+                <p>Discover my recent work, demonstrating my skills in web development and cybersecurity.</p>
+                <div class="project-grid">
+                    <div class="project-item">
+                        <h3>Project 1</h3>
+                        <p>Placeholder for a future project.</p>
+                    </div>
+                    <div class="project-item">
+                        <h3>Project 2</h3>
+                        <p>Placeholder for a future project.</p>
+                    </div>
+                    <div class="project-item">
+                        <h3>Project 3</h3>
+                        <p>Placeholder for a future project.</p>
+                    </div>
+                    <div class="project-item">
+                        <h3>Project 4</h3>
+                        <p>Placeholder for a future project.</p>
+                    </div>
+                </div>
+            </section>
+            
+        </main>
+    </div>
+    <script>
+        function toggleNav() {
+            var nav = document.getElementById("nav-menu");
+            nav.classList.toggle("show");
+        }
+    </script>
+
+    <footer id="this">
+        <div>
+            <p1>
+                &copy; 2025 Mohammed Midhulaj. All rights reserved.
+            </p1>
+        </div>
+    </footer>
+
+</body>
+</html>
