created mobile version

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
     <footer id="this">
         <div>
-            <p1>
+            <p>
                 &copy; 2025 Mohammed Midhulaj. All rights reserved.
-            </p1>
+            </p>
         </div>
     </footer>
+</body>
+</html>
