rearranged html and css for validation

--- a/videoDemo.html
+++ b/videoDemo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>videoDemo</title>
+    <title>Video Demo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 600px)">
 </head>
@@ -17,13 +17,13 @@
         <div class="menu-container">
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <input type="checkbox" id="menu-toggle">
-                <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="project.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="videoDemo.html">videoDemo</a></li>
-                    <li><a href="sitereport.html">siteReport</a></li>
-                </ul>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="videoDemo.html">Video Demo</a></li>
+                <li><a href="sitereport.html">Site Report</a></li>
+            </ul>
         </div>
     </nav>
 
@@ -32,19 +32,16 @@
             <h2>Video Demo</h2>
             <p>Below is a demonstration of my work, showcasing the functionality and design of my code. The video link will be updated soon.</p>
             <div class="video-container">
-        
                 <a href="#" class="video-link">Watch Video Demo</a>
             </div>
         </section>
-        
     </main>
 
     <footer id="this">
         <div>
-            <p1>
-                &copy; 2025 Mohammed Midhulaj. All rights reserved.
-            </p1>
+            <p>&copy; 2025 Mohammed Midhulaj. All rights reserved.</p>
         </div>
+    </footer>
 
 </body>
 </html>
