--- a/project.html
+++ b/project.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,54 +18,44 @@
         <div class="menu-container">
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <input type="checkbox" id="menu-toggle">
-                <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="project.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="videoDemo.html">videoDemo</a></li>
-                    <li><a href="sitereport.html">siteReport</a></li>
-                </ul>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="videoDemo.html">Video Demo</a></li>
+                <li><a href="sitereport.html">Site Report</a></li>
+            </ul>
         </div>
     </nav>
-        </nav>
-        <main>
-            <section id="projects">
-                <h2>Projects</h2>
-                <p>Discover my recent work, demonstrating my skills in web development and cybersecurity.</p>
-                <div class="project-grid">
-                    <div class="project-item">
-                        <h3>Project 1</h3>
-                        <p>Placeholder for a future project.</p>
-                    </div>
-                    <div class="project-item">
-                        <h3>Project 2</h3>
-                        <p>Placeholder for a future project.</p>
-                    </div>
-                    <div class="project-item">
-                        <h3>Project 3</h3>
-                        <p>Placeholder for a future project.</p>
-                    </div>
-                    <div class="project-item">
-                        <h3>Project 4</h3>
-                        <p>Placeholder for a future project.</p>
-                    </div>
+
+    <main>
+        <section id="projects">
+            <h2>Projects</h2>
+            <p>Discover my recent work, demonstrating my skills in web development and cybersecurity.</p>
+            <div class="project-grid">
+                <div class="project-item">
+                    <h3>Project 1</h3>
+                    <p>Placeholder for a future project.</p>
                 </div>
-            </section>
-            
-        </main>
-    </div>
-    <script>
-        function toggleNav() {
-            var nav = document.getElementById("nav-menu");
-            nav.classList.toggle("show");
-        }
-    </script>
+                <div class="project-item">
+                    <h3>Project 2</h3>
+                    <p>Placeholder for a future project.</p>
+                </div>
+                <div class="project-item">
+                    <h3>Project 3</h3>
+                    <p>Placeholder for a future project.</p>
+                </div>
+                <div class="project-item">
+                    <h3>Project 4</h3>
+                    <p>Placeholder for a future project.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer id="this">
         <div>
-            <p1>
-                &copy; 2025 Mohammed Midhulaj. All rights reserved.
-            </p1>
+            <p>&copy; 2025 Mohammed Midhulaj. All rights reserved.</p>
         </div>
     </footer>
 
