added html and css validation ss in report page

--- a/sitereport.html
+++ b/sitereport.html
@@ -37,13 +37,13 @@
     </div>
 
     <div class="image-gallery">
-        <img src="image1.png" alt="Image 1">
-        <img src="image2.png" alt="Image 2">
-        <img src="image3.png" alt="Image 3">
-        <img src="image4.png" alt="Image 4">
-        <img src="image5.png" alt="Image 5">
-        <img src="image6.png" alt="Image 6">
-        <img src="image7.png" alt="Image 7">
+        <img src="index check.jpg" alt="Image 1">
+        <img src="project check.jpg" alt="Image 2">
+        <img src="contact check.jpg" alt="Image 3">
+        <img src="demo check.jpg" alt="Image 4">
+        <img src="site check.jpg" alt="Image 5">
+        <img src="css valid.jpg" alt="Image 6">
+        <img src="css valid.jpg" alt="Image 7">
     </div>
 
     <div class="video-container">
