--- a/contact.html
+++ b/contact.html
@@ -12,21 +12,22 @@
     <header>
         <h1>Contact Me</h1>
         <h2>Get in touch with me for collaborations or inquiries!</h2>
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <input type="checkbox" id="menu-toggle" hidden>
+        <nav>
+            <div class="menu-container">
+                <label for="menu-toggle" class="menu-icon">&#9776;</label>
+                <input type="checkbox" id="menu-toggle">
+                <ul class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="videoDemo.html">Video Demo</a></li>
+                    <li><a href="sitereport.html">Site Report</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
-
-    <nav>
-        <div class="menu-container">
-            <label for="menu-toggle" class="menu-icon">&#9776;</label>
-            <input type="checkbox" id="menu-toggle">
-            <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="videoDemo.html">Video Demo</a></li>
-                <li><a href="sitereport.html">Site Report</a></li>
-            </ul>
-        </div>
-    </nav>
 
     <main>
         <section id="contact">
