--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>
         <h1>Welcome to Mohammed Midhulaj's Portfolio</h1>
         <p>Showcasing my journey in web development and cyber security.</p>
-    </header>
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+    <input type="checkbox" id="menu-toggle" hidden>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -21,6 +22,8 @@
             <li><a href="sitereport.html">Site Report</a></li>
         </ul>
     </nav>
+    </header>
+    
     <main>
         <div>
             <p>
