--- a/sitereport.html
+++ b/sitereport.html
@@ -8,16 +8,25 @@
     <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 600px)">
 </head>
 <body>
+
+    <header>
+        <h1>Site Report</h1>
+        <h2>My P.O.V</h2>
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <input type="checkbox" id="menu-toggle" hidden>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="videoDemo.html">Video Demo</a></li>
+                <li><a href="sitereport.html">Site Report</a></li>
+            </ul>
+        </nav>
+    </header>
+
     
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="project.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="videoDemo.html">Video Demo</a></li>
-            <li><a href="sitereport.html">Site Report</a></li>
-        </ul>
-    </nav>
+   
 
     
     <div class="learning-container">
@@ -49,6 +58,12 @@
     <div class="video-container">
         <a href="#" class="video-link">Watch Video Demo</a>
     </div>
+
+    <footer>
+        <div>
+            <p>&copy; 2025 Mohammed Midhulaj. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
 
