added video link to demo page final

--- a/videoDemo.html
+++ b/videoDemo.html
@@ -33,7 +33,7 @@
             <h2>Video Demo</h2>
             <p>Below is a demonstration of my work, showcasing the functionality and design of my code. The video link will be updated soon.</p>
             <div class="video-container">
-                <a href="#" class="video-link">Watch Video Demo</a>
+                <a href="https://www.youtube.com/watch?v=Z14B80jMGlw&ab_channel=Haha" class="video-link">Watch Video Demo</a>
             </div>
         </section>
     </main>
