--- a/sitereport.html
+++ b/sitereport.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="video-container">
-        <a href="#" class="video-link">Watch Video Demo</a>
+        <a href="https://www.youtube.com/watch?v=Z14B80jMGlw&ab_channel=Haha" class="video-link">Watch Video Demo</a>
     </div>
 
     <footer>
