--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <div class="contact-info">
                 <p><strong>Name:</strong> Mohammed Midhulaj</p>
                 <p><strong>Mobile:</strong> 07490292444</p>
-                <p><strong>Email:</strong> mohammed.kurukkalparambil23@my.student.northampton.ac.uk</p>
+                <p><strong>Email:</strong> midhulajparambil3110@gmail.com</p>
             </div>
             <div class="contact-form-container">
                 <form class="contact-form" action="#" method="post">
