--- a/videoDemo.html
+++ b/videoDemo.html
@@ -31,7 +31,7 @@
     <main>
         <section id="video-demo">
             <h2>Video Demo</h2>
-            <p>Below is a demonstration of my work, showcasing the functionality and design of my code. The video link will be updated soon.</p>
+            <p>Below is a demonstration of my work, showcasing the functionality and design of my code. Click the button below to view the video.</p>
             <div class="video-container">
                 <a href="https://www.youtube.com/watch?v=Z14B80jMGlw&ab_channel=Haha" class="video-link">Watch Video Demo</a>
             </div>
